Fix T64551 Crash on leaving local view on the shading tab

Was causing by garbage collection free the surf_per_mat_tris array.
The cache validate did not take care of ensuring the array was alloc again.